--- a/CLI/pom.xml
+++ b/CLI/pom.xml
@@ -1,158 +1,210 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>io.github.SaptarshiSarkar12</groupId>
-        <artifactId>Drifty</artifactId>
-        <version>2.1.0</version>
-    </parent>
-    <artifactId>CLI</artifactId>
-    <packaging>jar</packaging>
-    <name>CLI</name>
-    <description>CLI module of Drifty</description>
-
-    <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <cli.main-class>main.Drifty_CLI</cli.main-class>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>io.github.SaptarshiSarkar12</groupId>
-            <artifactId>Core</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>2.2</version>
-        </dependency>
-    </dependencies>
-
-    <profiles>
-        <!-- [Windows] CLI native image builder profile -->
-        <profile>
-            <id>build-drifty-cli-for-windows-latest</id>
-            <properties>
-                <resource-config-file>resource-config-windows.json</resource-config-file>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.graalvm.buildtools</groupId>
-                        <artifactId>native-maven-plugin</artifactId>
-                        <version>0.10.1</version>
-                        <extensions>true</extensions>
-                        <configuration>
-                            <imageName>Drifty CLI</imageName>
-                            <mainClass>${cli.main-class}</mainClass>
-                            <outputDirectory>target/CLI/windows</outputDirectory>
-                            <buildArgs>
-                                <buildArg>--enable-url-protocols=https</buildArg>
-                                <buildArg>--enable-url-protocols=http</buildArg>
-                                <buildArg>-H:ResourceConfigurationFiles=${project.parent.basedir}/config/${resource-config-file}</buildArg>
-                                <buildArg>--no-fallback</buildArg>
-                                <buildArg>-march=compatibility</buildArg>
-                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
-                                <buildArg>--verbose</buildArg>
-                            </buildArgs>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>build</id>
-                                <goals>
-                                    <goal>compile-no-fork</goal>
-                                </goals>
-                                <phase>package</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <!-- [Linux] CLI native image builder profile -->
-        <profile>
-            <id>build-drifty-cli-for-ubuntu-latest</id>
-            <properties>
-                <resource-config-file>resource-config-linux.json</resource-config-file>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.graalvm.buildtools</groupId>
-                        <artifactId>native-maven-plugin</artifactId>
-                        <version>0.10.1</version>
-                        <extensions>true</extensions>
-                        <configuration>
-                            <imageName>Drifty CLI</imageName>
-                            <mainClass>${cli.main-class}</mainClass>
-                            <outputDirectory>target/CLI/linux</outputDirectory>
-                            <buildArgs>
-                                <buildArg>--enable-url-protocols=https</buildArg>
-                                <buildArg>--enable-url-protocols=http</buildArg>
-                                <buildArg>-H:ResourceConfigurationFiles=${project.parent.basedir}/config/${resource-config-file}</buildArg>
-                                <buildArg>--no-fallback</buildArg>
-                                <buildArg>-march=compatibility</buildArg>
-                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
-                                <buildArg>--verbose</buildArg>
-                            </buildArgs>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>build</id>
-                                <goals>
-                                    <goal>compile-no-fork</goal>
-                                </goals>
-                                <phase>package</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <!-- [macOS] CLI native image builder profile -->
-        <profile>
-            <id>build-drifty-cli-for-macos-latest</id>
-            <properties>
-                <resource-config-file>resource-config-mac.json</resource-config-file>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.graalvm.buildtools</groupId>
-                        <artifactId>native-maven-plugin</artifactId>
-                        <version>0.10.1</version>
-                        <extensions>true</extensions>
-                        <configuration>
-                            <imageName>Drifty CLI</imageName>
-                            <mainClass>${cli.main-class}</mainClass>
-                            <outputDirectory>target/CLI/macos</outputDirectory>
-                            <buildArgs>
-                                <buildArg>--enable-url-protocols=https</buildArg>
-                                <buildArg>--enable-url-protocols=http</buildArg>
-                                <buildArg>-H:ResourceConfigurationFiles=${project.parent.basedir}/config/${resource-config-file}</buildArg>
-                                <buildArg>--no-fallback</buildArg>
-                                <buildArg>-march=compatibility</buildArg>
-                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
-                                <buildArg>--verbose</buildArg>
-                            </buildArgs>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>build</id>
-                                <goals>
-                                    <goal>compile-no-fork</goal>
-                                </goals>
-                                <phase>package</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>io.github.SaptarshiSarkar12</groupId>
+    <artifactId>Drifty</artifactId>
+    <version>2.1.0</version>
+  </parent>
+  <artifactId>CLI</artifactId>
+  <packaging>jar</packaging>
+  <name>CLI</name>
+  <description>CLI module of Drifty</description>
+  <properties>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <cli.main-class>main.Drifty_CLI</cli.main-class>
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.spring.javaformat</groupId>
+      <artifactId>spring-javaformat-formatter</artifactId>
+      <version>0.0.40</version>
+      <!--Dependency added by RoostGPT-->
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.7.0</version>
+      <scope>test</scope>
+      <!--Dependency added by RoostGPT-->
+    </dependency>
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <version>4.4.0</version>
+      <scope>compile</scope>
+      <!--Dependency added by RoostGPT-->
+    </dependency>
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+      <scope>compile</scope>
+      <!--Dependency added by RoostGPT-->
+    </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.4.0</version>
+      <scope>compile</scope>
+      <!--Dependency added by RoostGPT-->
+    </dependency>
+  </dependencies>
+  <profiles>
+    <!-- [Windows] CLI native image builder profile -->
+    <profile>
+      <id>build-drifty-cli-for-windows-latest</id>
+      <properties>
+        <resource-config-file>resource-config-windows.json</resource-config-file>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.graalvm.buildtools</groupId>
+            <artifactId>native-maven-plugin</artifactId>
+            <version>0.10.1</version>
+            <extensions>true</extensions>
+            <configuration>
+              <imageName>Drifty CLI</imageName>
+              <mainClass>${cli.main-class}</mainClass>
+              <outputDirectory>target/CLI/windows</outputDirectory>
+              <buildArgs>
+                <buildArg>--enable-url-protocols=https</buildArg>
+                <buildArg>--enable-url-protocols=http</buildArg>
+                <buildArg>-H:ResourceConfigurationFiles=${project.parent.basedir}/config/${resource-config-file}</buildArg>
+                <buildArg>--no-fallback</buildArg>
+                <buildArg>-march=compatibility</buildArg>
+                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
+                <buildArg>--verbose</buildArg>
+              </buildArgs>
+            </configuration>
+            <executions>
+              <execution>
+                <id>build</id>
+                <goals>
+                  <goal>compile-no-fork</goal>
+                </goals>
+                <phase>package</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <!-- [Linux] CLI native image builder profile -->
+    <profile>
+      <id>build-drifty-cli-for-ubuntu-latest</id>
+      <properties>
+        <resource-config-file>resource-config-linux.json</resource-config-file>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.graalvm.buildtools</groupId>
+            <artifactId>native-maven-plugin</artifactId>
+            <version>0.10.1</version>
+            <extensions>true</extensions>
+            <configuration>
+              <imageName>Drifty CLI</imageName>
+              <mainClass>${cli.main-class}</mainClass>
+              <outputDirectory>target/CLI/linux</outputDirectory>
+              <buildArgs>
+                <buildArg>--enable-url-protocols=https</buildArg>
+                <buildArg>--enable-url-protocols=http</buildArg>
+                <buildArg>-H:ResourceConfigurationFiles=${project.parent.basedir}/config/${resource-config-file}</buildArg>
+                <buildArg>--no-fallback</buildArg>
+                <buildArg>-march=compatibility</buildArg>
+                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
+                <buildArg>--verbose</buildArg>
+              </buildArgs>
+            </configuration>
+            <executions>
+              <execution>
+                <id>build</id>
+                <goals>
+                  <goal>compile-no-fork</goal>
+                </goals>
+                <phase>package</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <!-- [macOS] CLI native image builder profile -->
+    <profile>
+      <id>build-drifty-cli-for-macos-latest</id>
+      <properties>
+        <resource-config-file>resource-config-mac.json</resource-config-file>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.graalvm.buildtools</groupId>
+            <artifactId>native-maven-plugin</artifactId>
+            <version>0.10.1</version>
+            <extensions>true</extensions>
+            <configuration>
+              <imageName>Drifty CLI</imageName>
+              <mainClass>${cli.main-class}</mainClass>
+              <outputDirectory>target/CLI/macos</outputDirectory>
+              <buildArgs>
+                <buildArg>--enable-url-protocols=https</buildArg>
+                <buildArg>--enable-url-protocols=http</buildArg>
+                <buildArg>-H:ResourceConfigurationFiles=${project.parent.basedir}/config/${resource-config-file}</buildArg>
+                <buildArg>--no-fallback</buildArg>
+                <buildArg>-march=compatibility</buildArg>
+                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
+                <buildArg>--verbose</buildArg>
+              </buildArgs>
+            </configuration>
+            <executions>
+              <execution>
+                <id>build</id>
+                <goals>
+                  <goal>compile-no-fork</goal>
+                </goals>
+                <phase>package</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+        <!--Plugin added by RoostGPT-->
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>3.2.5</version>
+        <configuration>
+          <outputDirectory>testReport</outputDirectory>
+        </configuration>
+        <!--Plugin added by RoostGPT-->
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>2.1</version>
+        <configuration>
+          <outputDirectory>testReport</outputDirectory>
+        </configuration>
+        <!--Plugin added by RoostGPT-->
+      </plugin>
+    </plugins>
+  </build>
 </project>
